[RAP-3731: languages now fit on one line in gift registry and in stock on wishlist and other layout issues fixed]

--- a/app_storefront/cartridge/scss/default/_gift_registry.scss
+++ b/app_storefront/cartridge/scss/default/_gift_registry.scss
@@ -21,7 +21,7 @@
 		}
 	}
 	.hdr-options {
-		width: 5%;
+		width: 9%;
 	}
 }
 
